//
//  HVLReplayer.h
//  4champ Amiga Music Player
//
//  Copyright © 2018 Aleksi Sitomaniemi. All rights reserved.
//

#import <Foundation/Foundation.h>
#import "Replay.h"

@interface HVLReplayer : NSObject<ReplayControl, ReplayInformation, ReplayerStream>

@end
